cleaned up home and product page

--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -9,29 +9,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 
     <!-- FontAwesome CSS -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body><header class="site-header">
     
     <div class="site-branding">
-        <h1 class="site-title"><a href="index.html" rel="home"><img src="images/logo.png" alt="Logo"></a></h1>
+        <h1 class="site-title"><a href="/" rel="home"><img src="/images/logo.png" alt="Logo"></a></h1>
     </div><!-- .site-branding -->
 
 </header><!-- .site-header -->
 
 <nav class="site-navigation flex flex-column justify-content-between">
     <div class="site-branding d-none d-lg-block ">
-        <h1 class="site-title"><a href="index.html" rel="home"><img src="images/logo2.png" alt="Logo"></a></h1>
+        <h1 class="site-title"><a href="/" rel="home"><img src="/images/logo2.png" alt="Logo"></a></h1>
     </div><!-- .site-branding -->
 
     <ul class="main-menu flex flex-column justify-content-center">
-        <li class="current-menu-item"><a href="index.html">Home</a></li>
+        <li class="current-menu-item"><a href="/">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="#">About</a></li>
@@ -62,7 +62,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <div class="col-12">
                 <div class="featured-img">
                     <figure>
-                        <img src="images/single-portfolio.png" alt="">
+                        <img src="/images/1.jpg" alt="">
                     </figure>
                 </div><!-- .content-area -->
             </div><!-- .col-12 -->
@@ -115,9 +115,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <div class="col">
                 <nav class="post-nav">
                     <ul class="flex justify-content-between align-items-center">
-                        <li><a href="#"><img src="images/angle-left.png" alt="Previous"></a></li>
-                        <li><a href="#"><img src="images/portfolio-icon.png" alt="Back to Portfolio"></a></li>
-                        <li><a href="#"><img src="images/angle-right.png" alt="Next"></a></li>
+                        <li><a href="#"><img src="/images/angle-left.png" alt="Previous"></a></li>
+                        <li><a href="#"><img src="/images/portfolio-icon.png" alt="Back to Portfolio"></a></li>
+                        <li><a href="#"><img src="/images/angle-right.png" alt="Next"></a></li>
                     </ul>
                 </nav><!-- .post-nav -->
             </div><!-- .col -->
@@ -125,8 +125,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     </div><!-- .container -->
 </div><!-- .outer-container -->
 
-<script type='text/javascript' src='js/jquery.js'></script>
-<script type='text/javascript' src='js/custom.js'></script>
+<script type='text/javascript' src='/js/jquery.js'></script>
+<script type='text/javascript' src='/js/custom.js'></script>
 
 </body>
 </html>
