--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -1,4 +1,3 @@
-<div><%= data %></div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -62,7 +61,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <div class="col-12">
                 <div class="featured-img">
                     <figure>
-                        <img src="/images/1.jpg" alt="">
+                        <img src="<%= image %>" alt="">
                     </figure>
                 </div><!-- .content-area -->
             </div><!-- .col-12 -->
@@ -70,11 +69,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <div class="col-12 col-lg-8">
                 <div class="content-area">
                     <header class="entry-header">
-                        <h1>Black & Colors</h1>
+                        <h1><%= name %></h1>
                     </header><!-- .entry-header -->
 
                     <div class="entry-content">
-                        <p>Get the latest fashion tips and outfit ideas from your favorite celebrities and designers. Click through runway and front row photos from fashion week shows in New York, London, Paris, and Milan. Plus: browse key accessories like bags, shoes, and sunglasses, must-have denim </p>
+                        <p><%= description %></p>
                     </div><!-- .entry-content -->
 
                     <div class="post-share flex align-items-center">
@@ -95,18 +94,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="posted-date">
                         <label>Date</label>
 
-                        <span class="date-format"><a href="#">December 20, 2018</a></span>
+                        <span class="date-format"><a href="#"><%= date %></a></span>
                     </div><!-- .posted-date -->
 
-                    <div class="post-category">
-                        <label>Category</label>
-                        <span><a href="#">Photography</a></span>
-                    </div><!-- .post-category -->
+                    <div class="posted-date">
+                        <label>Price</label>
 
-                    <div class="posted-tags">
-                        <label>tags</label>
-                        <span><a href="#">Photography</a>, <a href="#">nature</a>, <a href="#">hat</a> </span>
-                    </div><!-- .entry-meta -->
+                        <span class="date-format"><a href="#"><%= amount %></a></span>
+                    </div><!-- .posted-date -->
+                   
                 </div><!-- .entry-meta -->
             </aside><!-- .col-md-3 -->
         </div><!-- .row -->
@@ -115,9 +111,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <div class="col">
                 <nav class="post-nav">
                     <ul class="flex justify-content-between align-items-center">
-                        <li><a href="#"><img src="/images/angle-left.png" alt="Previous"></a></li>
-                        <li><a href="#"><img src="/images/portfolio-icon.png" alt="Back to Portfolio"></a></li>
-                        <li><a href="#"><img src="/images/angle-right.png" alt="Next"></a></li>
+                        <li><a href="/product/<%= parseInt(id)-1 %>"><img src="/images/angle-left.png" alt="Previous"></a></li>
+                        <li><a href="/"><img src="/images/portfolio-icon.png" alt="Home"></a></li>
+                        <li><a href="/product/<%= parseInt(id)+1 %>"><img src="/images/angle-right.png" alt="Next"></a></li>
                     </ul>
                 </nav><!-- .post-nav -->
             </div><!-- .col -->
