--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -61,7 +61,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <div class="col-12">
                 <div class="featured-img">
                     <figure>
-                        <img src="<%= image %>" alt="">
+                        <img src="<%= image %>" alt="" height=500>
                     </figure>
                 </div><!-- .content-area -->
             </div><!-- .col-12 -->
